Final refactoring and fixing css overflow

--- a/src/css/style.styl
+++ b/src/css/style.styl
@@ -52,7 +52,7 @@ header.top
     background white
     transition all 0.3s
     box-shadow 0px 5px 5px rgba(0,0,0,0.1)
-    //overflow scroll
+    overflow scroll
     &:first-child
       flex-shrink 1 // take 4x the extra room
       flex-basis 10%
